--- a/common/ezo_hum.yaml
+++ b/common/ezo_hum.yaml
@@ -18,7 +18,7 @@ interval:
       - button.press: read_hum
 
 sensor:
-  # EZO Circuits (yellow - SCL/RX, blue - SDA/TX)
+  # EZO Circuits (SCL/RX, SDA/TX)
   # EZO Circuit - HUM
   # Humidity
   - platform: ezo
