--- a/blueprints/automation/TheRealFalseReality/aquapi_water_change.yaml
+++ b/blueprints/automation/TheRealFalseReality/aquapi_water_change.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: 'Aquarium - AquaPi: Water Change'
+  name: 'Aquarium - AquaPi: Daily Water Change'
   description: 'Turn on two AquaPi EZO Pumps to simultaneously remove waste water
     (Red) and add clean water (Green) daily, in gallons, per month.
 
