--- a/blueprints/automation/TheRealFalseReality/aquarium_dosing_daily.yaml
+++ b/blueprints/automation/TheRealFalseReality/aquarium_dosing_daily.yaml
@@ -175,4 +175,4 @@ action:
       data:
         message: '{{ notify_message_fail }}'
         title: '{{ notify_title_fail }}'
-mode: restart
+mode: single
