--- a/common/device_base_camera.yaml
+++ b/common/device_base_camera.yaml
@@ -9,7 +9,7 @@ esphome:
   friendly_name: "${friendly_name}"
   # Automatically add the mac address to the name
   name_add_mac_suffix: true
-  comment: "AquaPi SnapCam ESP32 - Aquarium Camera"
+  comment: "AquaPiCam ESP32 - Aquarium Camera"
   project:
     name: TheRealFalseReality.aquapi
     version: "${app_version}"
