--- a/common/device_base.yaml
+++ b/common/device_base.yaml
@@ -34,8 +34,12 @@ logger:
 
 api:
 
+http_request:
+  verify_ssl: false
+
 ota:
-  platform: esphome
+  - platform: esphome
+  - platform: http_request
 
 wifi: 
   ap:
@@ -164,3 +168,13 @@ button:
   - platform: shutdown
     name: "Shutdown"
     disabled_by_default: true
+
+  - platform: template
+    id: update_firmware
+    name: Update Firmware
+    entity_category: "config"
+    on_press: 
+      then:
+        - ota.http_request.flash:
+            md5_url: https://github.com/TheRealFalseReality/aquapi/blob/main/bin/ota/aquapi.md5
+            url: https://github.com/TheRealFalseReality/aquapi/blob/main/bin/ota/aquapi.ota.bin   
