--- a/common/device_base.yaml
+++ b/common/device_base.yaml
@@ -171,7 +171,7 @@ button:
 
   - platform: template
     id: update_firmware
-    name: Update Firmware
+    name: Update Firmware (Experimental)
     entity_category: "config"
     on_press: 
       then:
