--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -20,6 +20,6 @@ packages:
   # ezo_do: !include common/ezo_do.yaml
   ezo_pmp: !include common/ezo_pmp.yaml
   # ezo_pmp_extra: !include common/ezo_pmp_extra.yaml
-  ezo_pmp_duo_1: !include common/ezo_pmp_duo_1.yaml
+  ezo_pmp_duo: !include common/ezo_pmp_duo.yaml
   # ezo_commands: !include common/ezo_commands.yaml
   # debug: !include common/debug.yaml
