--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -7,19 +7,19 @@ substitutions:
 
 packages:
   device_base: !include common/device_base.yaml
-  # aquapi: !include common/aquapi.yaml
-  # dallas: !include common/temperature_dallas.yaml
-  # binary: !include common/binary.yaml
-  # binary_input: !include common/binary_input.yaml
-  # ezo_ph: !include common/ezo_ph.yaml
-  # ezo_ec: !include common/ezo_ec.yaml
-  # ezo_orp: !include common/ezo_orp.yaml
-  # # ezo_hum: !include common/ezo_hum.yaml
-  # # ezo_rtd: !include common/ezo_rtd.yaml
-  # ezo_co2: !include common/ezo_co2.yaml
-  # # ezo_do: !include common/ezo_do.yaml
-  # ezo_pmp: !include common/ezo_pmp.yaml
-  # # ezo_pmp_extra: !include common/ezo_pmp_extra.yaml
-  # ezo_pmp_duo: !include common/ezo_pmp_duo.yaml
+  aquapi: !include common/aquapi.yaml
+  dallas: !include common/temperature_dallas.yaml
+  binary: !include common/binary.yaml
+  binary_input: !include common/binary_input.yaml
+  ezo_ph: !include common/ezo_ph.yaml
+  ezo_ec: !include common/ezo_ec.yaml
+  ezo_orp: !include common/ezo_orp.yaml
+  # ezo_hum: !include common/ezo_hum.yaml
+  # ezo_rtd: !include common/ezo_rtd.yaml
+  ezo_co2: !include common/ezo_co2.yaml
+  # ezo_do: !include common/ezo_do.yaml
+  ezo_pmp: !include common/ezo_pmp.yaml
+  # ezo_pmp_extra: !include common/ezo_pmp_extra.yaml
+  ezo_pmp_duo: !include common/ezo_pmp_duo.yaml
   # ezo_commands: !include common/ezo_commands.yaml
   # debug: !include common/debug.yaml
