--- a/common/device_base.yaml
+++ b/common/device_base.yaml
@@ -9,7 +9,7 @@ substitutions:
   sclPin: "22" # blue/RX
 
 esphome:
-  # min_version: 2024.6.0
+  min_version: 2024.6.0
   name: "${name}"
   friendly_name: "${friendly_name}"
   # Automatically add the mac address to the name
