--- a/common/binary.yaml
+++ b/common/binary.yaml
@@ -1,8 +1,8 @@
 substitutions:  
   opticalLowPin: "33" # yellow
   opticalHighPin: "32" # blue
-  auxPin1: "26" # yellow
-  auxPin2: "25" # blue
+  auxPin: "26" # yellow
+  leak_sensor: "25" # blue
   # Water Level
   update_water: "60s"
 
@@ -52,7 +52,7 @@ binary_sensor:
     id: aux_1
     disabled_by_default: true
     pin: 
-      number: ${auxPin1}
+      number: ${auxPin}
       inverted: true
       mode:
         input: true
@@ -63,15 +63,15 @@ binary_sensor:
 
   # Additional Pin 2
   - platform: gpio
-    id: aux_2
+    id: leak_sensor
     disabled_by_default: true
     pin: 
-      number: ${auxPin2}
+      number: ${leak_sensor}
       inverted: true
       mode:
         input: true
         pullup: true
-    name: Aux 2
+    name: Leak Sensor
     filters:
       - delayed_on_off: 30ms
 
