--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,17 @@
     "builds": [
       {
         "chipFamily": "ESP32",
+        "parts": [
+            { "path": "bootloader_dout_40m.bin", "offset": 4096 },
+            { "path": "partitions.bin", "offset": 32768 },
+            { "path": "boot_app0.bin", "offset": 57344 },
+            { "path": "esp32.bin", "offset": 65536 }
+          ],
         "ota": {
           "md5": "19846cd079d975f7ee77e99f248af5b0",
           "path": "/bin/ota/aquapi.ota.bin",
           "release_url": "https://github.com/TheRealFalseReality/aquapi/releases/tag/v1.8.3",
-          "summary": "Another update",
+          "summary": "Another update"
         }
       }
     ]
