--- a/common/device_base.yaml
+++ b/common/device_base.yaml
@@ -34,12 +34,17 @@ logger:
 
 api:
 
-# http_request:
-#   verify_ssl: false
+update:
+  - platform: http_request
+    name: Firmware Update
+    source: https://github.com/TheRealFalseReality/aquapi/blob/main/manifest.json
+
+http_request:
+  verify_ssl: false
 
 ota:
   - platform: esphome
-  # - platform: http_request
+  - platform: http_request
 
 wifi: 
   ap:
@@ -169,13 +174,13 @@ button:
     name: "Shutdown"
     disabled_by_default: true
 
-  # - platform: template
-  #   id: update_firmware
-  #   name: Update Firmware (Experimental)
-  #   entity_category: "config"
-  #   disabled_by_default: true
-  #   on_press: 
-  #     then:
-  #       - ota.http_request.flash:
-  #           md5_url: https://github.com/TheRealFalseReality/aquapi/blob/main/bin/ota/aquapi.md5
-  #           url: https://github.com/TheRealFalseReality/aquapi/blob/main/bin/ota/aquapi.ota.bin   
+  - platform: template
+    id: update_firmware
+    name: Update Firmware (Experimental)
+    entity_category: "config"
+    disabled_by_default: true
+    on_press: 
+      then:
+        - ota.http_request.flash:
+            md5_url: https://github.com/TheRealFalseReality/aquapi/blob/main/bin/ota/aquapi.md5
+            url: https://github.com/TheRealFalseReality/aquapi/blob/main/bin/ota/aquapi.ota.bin   
