--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,9 @@
         "chipFamily": "ESP32",
         "ota": {
           "md5": "19846cd079d975f7ee77e99f248af5b0",
-          "path": "https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/ota/aquapi.ota.bin"
+          "path": "https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/ota/aquapi.ota.bin",
+          "release_url": "https://github.com/TheRealFalseReality/aquapi/releases/tag/v1.8.3",
+          "summary": "Another update",
         }
       }
     ]
