--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
-    "name": "AquaPi",
-    "version": "1.8.4",
-    "builds": [
-      {
-        "chipFamily": "ESP32",
-        "ota": {
-          "md5": "7ed726f6b2868d8ec972b7a9ccfeee27",
-          "path": "/bin/factory/aquapi_183.factory.bin",
-          "release_url": "https://github.com/TheRealFalseReality/aquapi/releases/tag/v1.8.3",
-          "summary": "Another update",
-        }
+  "name": "AquaPi",
+  "version": "1.8.4",
+  "builds": [
+    {
+      "chipFamily": "ESP32",
+      "ota": {
+        "md5": "7ed726f6b2868d8ec972b7a9ccfeee27",
+        "path": "/bin/factory/aquapi_183.factory.bin",
+        "release_url": "https://github.com/TheRealFalseReality/aquapi/releases/tag/v1.8.3",
+        "summary": "Another update"
       }
-    ]
-  }
+    }
+  ]
+}
