--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -2,12 +2,13 @@ substitutions:
   # names
   name: "aquapi"
   friendly_name: "AquaPi"
-  # App Version - Updated: 1/2024
-  app_version: "1.8.3"
+  # App Version - Updated: 6/2024
+  app_version: "1.8.5"
 
 packages:
   device_base: !include common/device_base.yaml
   aquapi: !include common/aquapi.yaml
+  ota_https: !include common/ota_https.yaml
   dallas: !include common/temperature_dallas.yaml
   binary: !include common/binary.yaml
   # binary_input: !include common/binary_input.yaml
