--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,15 @@
 {
-    "name": "AquaPi",
-    "version": "1.8.5",
-    "builds": [
-      {
-        "chipFamily": "ESP32",
-        "ota": {
-          "md5": "19846cd079d975f7ee77e99f248af5b0",
-          "path": "https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/bin/ota/aquapi.ota.bin"
-        }
+  "name": "AquaPi",
+  "version": "1.8.3",
+  "home_assistant_domain": "esphome",
+  "builds": [
+    {
+      "chipFamily": "ESP32",
+      "ota": {
+        "md5": "7ed726f6b2868d8ec972b7a9ccfeee27",
+        "path": "/TheRealFalseReality/aquapi/main/bin/factory/aquapi.factory.bin",
+        "release_url": "https://github.com/TheRealFalseReality/aquapi/releases/tag/v1.8.3"
       }
-    ]
-  }
+    }
+  ]
+}
