--- a/common/ezo_pmp.yaml
+++ b/common/ezo_pmp.yaml
@@ -4,61 +4,61 @@ substitutions:
   update_pmp_3: "60s"
 
 ezo_pmp:
-  - id: ezo_pump
+  - id: ezo_pump_white
     address: ${addPMP}
     update_interval: "${update_pmp_3}"
 
 api:
   services: 
-    - service: pump_dose_volume
+    - service: pump_white_dose_volume
       variables: 
         dose_volume: float
       then: 
         - ezo_pmp.dose_volume:
-            id: ezo_pump
+            id: ezo_pump_white
             volume: !lambda 'return dose_volume;'
-    - service: pump_dose_volume_time
+    - service: pump_white_dose_volume_time
       variables:
         dose_volume: float
         dose_time: float
       then:
         - ezo_pmp.dose_volume_over_time:
-            id: ezo_pump
+            id: ezo_pump_white
             volume: !lambda |-
               return dose_volume;
             duration: !lambda |-
               return dose_time;
-    - service: pump_dose_flow_rate_time
+    - service: pump_white_dose_flow_rate_time
       variables:
         dose_rate: float
         dose_time: float
       then:
         - ezo_pmp.dose_with_constant_flow_rate:
-            id: ezo_pump
+            id: ezo_pump_white
             volume_per_minute: !lambda |-
               return dose_rate;
             duration: !lambda |-
               return dose_time;
-    - service: pump_dose_set_calibration
+    - service: pump_white_dose_set_calibration
       variables:
         actual_volume: float
       then:
         - ezo_pmp.set_calibration_volume:
-            id: ezo_pump
+            id: ezo_pump_white
             volume: !lambda |-
               return actual_volume;
-    - service: pump_change_address
+    - service: pump_white_change_address
       variables:
         address: int
       then:
         - ezo_pmp.change_i2c_address:
-            id: ezo_pump
+            id: ezo_pump_white
             address: !lambda |-
               return address;
 
 sensor:
   - platform: ezo_pmp
-    id: ezo_pump
+    id: ezo_pump_white
     current_volume_dosed:
       id: current_volume_dosed
       name: Pump - Current Volume Dosed
@@ -67,7 +67,7 @@ sensor:
       unit_of_measurement: 'mL'
       state_class: total
   - platform: ezo_pmp
-    id: ezo_pump
+    id: ezo_pump_white
     total_volume_dosed:
       id: total_volume_dosed
       name: Pump - Total Volume Dosed
@@ -76,7 +76,7 @@ sensor:
       unit_of_measurement: 'mL'
       disabled_by_default: true
   - platform: ezo_pmp
-    id: ezo_pump
+    id: ezo_pump_white
     absolute_total_volume_dosed:
       id: absolute_total_volume_dosed
       name: Pump - Absolute Total Volume Dosed
@@ -85,7 +85,7 @@ sensor:
       state_class: total
       unit_of_measurement: 'mL'
   - platform: ezo_pmp
-    id: ezo_pump
+    id: ezo_pump_white
     last_volume_requested:
       id: last_volume_requested
       name: Pump - Last Volume Requested
@@ -94,29 +94,29 @@ sensor:
       state_class: total
       unit_of_measurement: 'mL'
   - platform: ezo_pmp
-    id: ezo_pump
+    id: ezo_pump_white
     max_flow_rate:
       id: max_flow_rate
       name: Pump - Max Volume/Time Flow Rate
       icon: mdi:car-speed-limiter
       unit_of_measurement: 'mL/min'
   - platform: ezo_pmp
-    id: ezo_pump
+    id: ezo_pump_white
     pump_voltage:
-      id: pump_voltage
+      id: pump_white_voltage
       name: Pump - Voltage
       disabled_by_default: true
       device_class: 'voltage'
 
 binary_sensor:
   - platform: ezo_pmp
-    id: ezo_pump
+    id: ezo_pump_white
     pump_state:
-      id: pump_state
+      id: pump_white_state
       name: Pump - State
       icon: mdi:pump
   - platform: ezo_pmp
-    id: ezo_pump
+    id: ezo_pump_white
     is_paused:
       id: is_paused
       name: Pump - Paused Status
@@ -124,13 +124,13 @@ binary_sensor:
 
 text_sensor:
   - platform: ezo_pmp
-    id: ezo_pump
+    id: ezo_pump_white
     dosing_mode:
       id: dosing_mode
       name: Pump - Dosing Mode 
       icon: mdi:auto-mode
   - platform: ezo_pmp
-    id: ezo_pump
+    id: ezo_pump_white
     calibration_status:
       id: calibration_status
       name: Pump - Calibration Status
@@ -182,7 +182,7 @@ button:
     id: dose_over_time
     on_press:
       - ezo_pmp.dose_volume_over_time:
-          id: ezo_pump
+          id: ezo_pump_white
           volume: !lambda |-
             return id(volume).state;
           duration: !lambda |-
@@ -193,14 +193,14 @@ button:
     id: dose_continuously
     on_press:
       - ezo_pmp.dose_continuously:
-          id: ezo_pump
+          id: ezo_pump_white
   - platform: template
     name: Pump - Dose Volume
     icon: mdi:pump
     id: dose_volume
     on_press:
       - ezo_pmp.dose_volume:
-          id: ezo_pump
+          id: ezo_pump_white
           volume: !lambda |-
             return id(volume).state;
   - platform: template
@@ -209,7 +209,7 @@ button:
     id: dose_flow_rate
     on_press:
       - ezo_pmp.dose_with_constant_flow_rate:
-          id: ezo_pump
+          id: ezo_pump_white
           volume_per_minute: !lambda |-
             return id(flow_rate).state;
           duration: !lambda |-
@@ -220,21 +220,21 @@ button:
     id: dose_pause
     on_press:
       - ezo_pmp.pause_dosing:
-          id: ezo_pump
+          id: ezo_pump_white
   - platform: template
     name: Pump - Stop Dosing
     icon: mdi:stop
     id: dose_stop
     on_press:
       - ezo_pmp.stop_dosing:
-          id: ezo_pump
+          id: ezo_pump_white
   - platform: template
     name: Pump - Clear Total Volume Dosed
     icon: mdi:backspace
     id: dose_clear
     on_press:
       - ezo_pmp.clear_total_volume_dosed:
-          id: ezo_pump
+          id: ezo_pump_white
 
   # Calibrate
   - platform: template
@@ -243,7 +243,7 @@ button:
     id: dose_calibrate_volume
     on_press:
       - ezo_pmp.set_calibration_volume:
-          id: ezo_pump
+          id: ezo_pump_white
           volume: !lambda |-
             return id(volume).state;
   - platform: template
@@ -252,4 +252,4 @@ button:
     id: dose_calibrate_volume_clear
     on_press:
       - ezo_pmp.clear_calibration:
-          id: ezo_pump
+          id: ezo_pump_white
