--- a/common/device_base.yaml
+++ b/common/device_base.yaml
@@ -68,6 +68,7 @@ light:
   - platform: status_led
     id: internal_led
     pin: GPIO2
+    ignore_strapping_warning: true
 
 sensor:
   # Internal Magnetic Sensor
