--- a/common/device_base_camera.yaml
+++ b/common/device_base_camera.yaml
@@ -61,6 +61,7 @@ light:
   - platform: status_led
     id: internal_led
     pin: 33
+    ignore_strapping_warning: true
     
   - platform: binary
     output: camera_pin
