--- a/common/device_base_camera.yaml
+++ b/common/device_base_camera.yaml
@@ -60,9 +60,7 @@ light:
 # Internal Red LED
   - platform: status_led
     id: internal_led
-    pin: 
-      number: 33
-      ignore_strapping_warning: true
+    pin: 33
     
   - platform: binary
     output: camera_pin
