--- a/common/ota_https.yaml
+++ b/common/ota_https.yaml
@@ -10,6 +10,7 @@ update:
     update_interval: "${update_firmware_sensor_interval}"
     id: update_firmware_sensor
     entity_category: 'diagnostic'
+    icon: mdi:update
     source: https://raw.githubusercontent.com/TheRealFalseReality/aquapi/main/manifest.json
 
 ota:
